LLMAI-136: Additional improvements   * dispose() now releases the write lock before blocking on closeGracefully(),     consistent with the rebuildServer() pattern   * Clarified the server name null/blank guard in rebuildServer(): simplified to     isBlank() and updated the comment to explain it also protects against Mockito     mocks returning null by default during tests   * list_collections returns "No collections found." instead of an empty string     when the user has access to no collections, matching search_collections behavior   * @since tags corrected to 0.9 on MCPServerConfiguration and MCPConfigChangeEventListener   * Arrays.asList replaced with List.of in MCPServerConfiguration